refactor: changing nomenclature

--- a/notebooks/additional_notebooks/demo_multiclass.ipynb
+++ b/notebooks/additional_notebooks/demo_multiclass.ipynb
@@ -1039,8 +1039,8 @@
    ],
    "source": [
     "for i in range(num_to_test):\n",
-    "    factual_explanation.plot(i, n_features_to_show=5)\n",
-    "    factual_explanation.plot(i, uncertainty=True, n_features_to_show=5)"
+    "    factual_explanation.plot(i, filter_top=5)\n",
+    "    factual_explanation.plot(i, uncertainty=True, filter_top=5)"
    ]
   },
   {
@@ -1078,8 +1078,8 @@
    ],
    "source": [
     "factual_15 = factual_explanation.get_explanation(15)\n",
-    "factual_15.add_conjunctions(max_rule_size=2).plot(uncertainty=True, n_features_to_show=30)\n",
-    "factual_15.remove_conjunctions().plot(uncertainty=True, n_features_to_show=5)"
+    "factual_15.add_conjunctions(max_rule_size=2).plot(uncertainty=True, filter_top=30)\n",
+    "factual_15.remove_conjunctions().plot(uncertainty=True, filter_top=5)"
    ]
   },
   {
@@ -1117,8 +1117,8 @@
    ],
    "source": [
     "factual_17 = factual_explanation.get_explanation(17)\n",
-    "factual_17.add_conjunctions(max_rule_size=2).plot(uncertainty=True, n_features_to_show=15)\n",
-    "factual_17.remove_conjunctions().plot(uncertainty=True, n_features_to_show=5)"
+    "factual_17.add_conjunctions(max_rule_size=2).plot(uncertainty=True, filter_top=15)\n",
+    "factual_17.remove_conjunctions().plot(uncertainty=True, filter_top=5)"
    ]
   },
   {
@@ -1332,7 +1332,7 @@
    ],
    "source": [
     "for i in range(num_to_test):\n",
-    "    alternative_explanation.plot(i, n_features_to_show=5)"
+    "    alternative_explanation.plot(i, filter_top=5)"
    ]
   },
   {
@@ -1370,8 +1370,8 @@
    ],
    "source": [
     "alternative_15 = alternative_explanation.get_explanation(15)\n",
-    "alternative_15.add_conjunctions(max_rule_size=2).plot(n_features_to_show=15)\n",
-    "alternative_15.remove_conjunctions().plot(n_features_to_show=5)"
+    "alternative_15.add_conjunctions(max_rule_size=2).plot(filter_top=15)\n",
+    "alternative_15.remove_conjunctions().plot(filter_top=5)"
    ]
   },
   {
@@ -1409,8 +1409,8 @@
    ],
    "source": [
     "alternative_17 = alternative_explanation.get_explanation(17)\n",
-    "alternative_17.add_conjunctions(max_rule_size=3).plot(n_features_to_show=15)\n",
-    "alternative_17.remove_conjunctions().plot(n_features_to_show=5)"
+    "alternative_17.add_conjunctions(max_rule_size=3).plot(filter_top=15)\n",
+    "alternative_17.remove_conjunctions().plot(filter_top=5)"
    ]
   }
  ],
