--- a/notebooks/additional_notebooks/demo_speeddating.ipynb
+++ b/notebooks/additional_notebooks/demo_speeddating.ipynb
@@ -651,13 +651,13 @@
    ],
    "source": [
     "tic = time.time()\n",
-    "alternative_explanation.plot(n_features_to_show=15)\n",
+    "alternative_explanation.plot(filter_top=15)\n",
     "print(f\"Time taken plotting alternative rules per instance: {(time.time()-tic)/num_to_test}\")\n",
     "tic = time.time()\n",
     "exp = alternative_explanation.add_conjunctions()\n",
     "print(f\"Time taken constructing conjunctive rules per instance: {(time.time()-tic)/num_to_test}\")\n",
     "tic = time.time()\n",
-    "alternative_explanation.plot(n_features_to_show=15)\n",
+    "alternative_explanation.plot(filter_top=15)\n",
     "print(f\"Time taken plotting alternative and conjunctive rules per instance: {(time.time()-tic)/num_to_test}\")"
    ]
   },
