--- a/notebooks/demo_binary_classification.ipynb
+++ b/notebooks/demo_binary_classification.ipynb
@@ -726,7 +726,7 @@
     "\n",
     "Once the explanations are extracted, we can visualize them using regular or uncertainty plots. The regular plot include an uncertainty interval for each class and the weights of the most influential features. The weights (positive or negative) always indicate the impact on the blue class. However, the colors are used to indicate which class is positively affected. Negative (red) weights are reducing the probability of the blue class and increasing the probability of the red class. \n",
     "\n",
-    "Regular plots are shown by calling the function `plot`, with `n_features_to_show` indicating the number of features to include, in order of importance. To save the plots to disk, `save_ext` can take one or several of the following extensions `['pdf','svg','png']` creating a plot for each instance and file format. "
+    "Regular plots are shown by calling the function `plot`, with `filter_top` indicating the number of features to include, in order of importance. To save the plots to disk, `save_ext` can take one or several of the following extensions `['pdf','svg','png']` creating a plot for each instance and file format. "
    ]
   },
   {
@@ -863,8 +863,8 @@
    ],
    "source": [
     "factual_explanation.add_conjunctions()\n",
-    "factual_explanation.plot(n_features_to_show=15)\n",
-    "factual_explanation.plot(uncertainty=True, n_features_to_show=15)"
+    "factual_explanation.plot(filter_top=15)\n",
+    "factual_explanation.plot(uncertainty=True, filter_top=15)"
    ]
   },
   {
@@ -953,7 +953,7 @@
     }
    ],
    "source": [
-    "alternative_explanation.add_conjunctions().plot(n_features_to_show=15)"
+    "alternative_explanation.add_conjunctions().plot(filter_top=15)"
    ]
   }
  ],
