--- a/notebooks/demo_probabilistic_regression.ipynb
+++ b/notebooks/demo_probabilistic_regression.ipynb
@@ -1024,7 +1024,7 @@
    "source": [
     "factual_explanation = ce.explain_factual(X_test, 180000)\n",
     "\n",
-    "factual_explanation.add_conjunctions(n_top_features=5).plot(n_features_to_show=15)"
+    "factual_explanation.add_conjunctions(n_top_features=5).plot(filter_top=15)"
    ]
   },
   {
