--- a/notebooks/demo_regression.ipynb
+++ b/notebooks/demo_regression.ipynb
@@ -360,7 +360,7 @@
     "\n",
     "Once the explanations are extracted, we can visualize them using various plots. The regular plot include an uncertainty estimate for the prediction and the weights of the most influential features. The shaded area is the the prediction interval with 95% confidence. The solid line in the middle of the shaded interval is the median in the conformal predictive distribution.\n",
     "\n",
-    "Regular plots are shown by calling the function `plot`, with `n_features_to_show` indicating the number of features to include (default 10), in order of importance. "
+    "Regular plots are shown by calling the function `plot`, with `filter_top` indicating the number of features to include (default 10), in order of importance. "
    ]
   },
   {
@@ -588,7 +588,7 @@
     }
    ],
    "source": [
-    "alternative_explanation.add_conjunctions(n_top_features=5).plot(n_features_to_show=15)"
+    "alternative_explanation.add_conjunctions(n_top_features=5).plot(filter_top=15)"
    ]
   },
   {
@@ -719,7 +719,7 @@
    "source": [
     "factual_explanation = ce.explain_factual(X_test, low_high_percentiles=tsi)\n",
     "factual_explanation.add_conjunctions(n_top_features=5)\n",
-    "factual_explanation.plot(n_features_to_show=15)"
+    "factual_explanation.plot(filter_top=15)"
    ]
   },
   {
@@ -739,7 +739,7 @@
     }
    ],
    "source": [
-    "factual_explanation.plot(uncertainty=True, n_features_to_show=15)"
+    "factual_explanation.plot(uncertainty=True, filter_top=15)"
    ]
   },
   {
@@ -801,7 +801,7 @@
    ],
    "source": [
     "factual_explanation = ce.explain_factual(X_test, low_high_percentiles=osli)\n",
-    "factual_explanation.plot(n_features_to_show=3)"
+    "factual_explanation.plot(filter_top=3)"
    ]
   },
   {
@@ -822,7 +822,7 @@
    ],
    "source": [
     "factual_explanation = ce.explain_factual(X_test, low_high_percentiles=osui)\n",
-    "factual_explanation.plot(n_features_to_show=3)"
+    "factual_explanation.plot(filter_top=3)"
    ]
   },
   {
@@ -850,7 +850,7 @@
    ],
    "source": [
     "alternative_explanation = ce.explore_alternatives(X_test, low_high_percentiles=tsi)\n",
-    "alternative_explanation.add_conjunctions(n_top_features=5, max_rule_size=3).plot(n_features_to_show=15)\n"
+    "alternative_explanation.add_conjunctions(n_top_features=5, max_rule_size=3).plot(filter_top=15)\n"
    ]
   },
   {
@@ -950,7 +950,7 @@
    "source": [
     "factual_explanation = ce.explain_factual(X_test, low_high_percentiles=tsi)\n",
     "factual_explanation.add_conjunctions(n_top_features=5)\n",
-    "factual_explanation.plot(n_features_to_show=15)"
+    "factual_explanation.plot(filter_top=15)"
    ]
   },
   {
@@ -970,7 +970,7 @@
     }
    ],
    "source": [
-    "factual_explanation.plot(uncertainty=True, n_features_to_show=15)"
+    "factual_explanation.plot(uncertainty=True, filter_top=15)"
    ]
   },
   {
@@ -1081,7 +1081,7 @@
    ],
    "source": [
     "alternative_explanation = ce.explore_alternatives(X_test, low_high_percentiles=tsi)\n",
-    "alternative_explanation.add_conjunctions(n_top_features=5).plot(n_features_to_show=15)"
+    "alternative_explanation.add_conjunctions(n_top_features=5).plot(filter_top=15)"
    ]
   },
   {
