--- a/evaluation/Conditional_Fairness_Experiment.ipynb
+++ b/evaluation/Conditional_Fairness_Experiment.ipynb
@@ -197,7 +197,7 @@
     "    mondrian_x['width'][attr] = []\n",
     "\n",
     "for l in range(num_rep):\n",
-    "    np.random.seed = l\n",
+    "    np.random.seed(l)\n",
     "    indeces = np.random.permutation(no_of_instances)\n",
     "    X = X[indeces,:]\n",
     "    y = y[indeces]\n",
@@ -268,7 +268,7 @@
     "    mondrian['width'][attr] = []\n",
     "\n",
     "for l in range(num_rep):\n",
-    "    np.random.seed = l\n",
+    "    np.random.seed(l)\n",
     "    indeces = np.random.permutation(no_of_instances)\n",
     "    X = X[indeces,:]\n",
     "    y = y[indeces]\n",
@@ -333,7 +333,7 @@
     "    \n",
     "time_split = time()\n",
     "for l in range(num_rep):\n",
-    "    np.random.seed = l\n",
+    "    np.random.seed(l)\n",
     "    indeces = np.random.permutation(no_of_instances)\n",
     "    X = X[indeces,:]\n",
     "    y = y[indeces]\n",
@@ -607,7 +607,7 @@
     "    mondrian_x['width'][attr] = []\n",
     "\n",
     "for l in range(num_rep):\n",
-    "    np.random.seed = l\n",
+    "    np.random.seed(l)\n",
     "    indeces = np.random.permutation(no_of_instances)\n",
     "    X = X[indeces,:]\n",
     "    y = y[indeces]\n",
@@ -677,7 +677,7 @@
     "\n",
     "time_mondrian = time()\n",
     "for l in range(num_rep):\n",
-    "    np.random.seed = l\n",
+    "    np.random.seed(l)\n",
     "    indeces = np.random.permutation(no_of_instances)\n",
     "    X = X[indeces,:]\n",
     "    y = y[indeces]\n",
@@ -749,7 +749,7 @@
     "\n",
     "time_split = time()\n",
     "for l in range(num_rep):\n",
-    "    np.random.seed = l\n",
+    "    np.random.seed(l)\n",
     "    indeces = np.random.permutation(no_of_instances)\n",
     "    X = X[indeces,:]\n",
     "    y = y[indeces]\n",
@@ -1043,7 +1043,7 @@
     "    mondrian_x['width'][attr] = []\n",
     "\n",
     "for l in range(num_rep):\n",
-    "    np.random.seed = l\n",
+    "    np.random.seed(l)\n",
     "    indeces = np.random.permutation(no_of_instances)\n",
     "    X = X[indeces,:]\n",
     "    y = y[indeces]\n",
@@ -1115,7 +1115,7 @@
     "\n",
     "time_mondrian = time()\n",
     "for l in range(num_rep):\n",
-    "    np.random.seed = l\n",
+    "    np.random.seed(l)\n",
     "    indeces = np.random.permutation(no_of_instances)\n",
     "    X = X[indeces,:]\n",
     "    y = y[indeces]\n",
@@ -1180,7 +1180,7 @@
     "\n",
     "time_split = time()\n",
     "for l in range(num_rep):\n",
-    "    np.random.seed = l\n",
+    "    np.random.seed(l)\n",
     "    indeces = np.random.permutation(no_of_instances)\n",
     "    X = X[indeces,:]\n",
     "    y = y[indeces]\n",
@@ -1434,7 +1434,7 @@
     "\n",
     "time_mondrian = time()\n",
     "for l in range(num_rep):\n",
-    "    np.random.seed = l\n",
+    "    np.random.seed(l)\n",
     "    indeces = np.random.permutation(no_of_instances)\n",
     "    X = X[indeces,:]\n",
     "    y = y[indeces]\n",
@@ -1506,7 +1506,7 @@
     "\n",
     "time_mondrian = time()\n",
     "for l in range(num_rep):\n",
-    "    np.random.seed = l\n",
+    "    np.random.seed(l)\n",
     "    indeces = np.random.permutation(no_of_instances)\n",
     "    X = X[indeces,:]\n",
     "    y = y[indeces]\n",
@@ -1574,7 +1574,7 @@
     "\n",
     "time_split = time()\n",
     "for l in range(num_rep):\n",
-    "    np.random.seed = l\n",
+    "    np.random.seed(l)\n",
     "    indeces = np.random.permutation(no_of_instances)\n",
     "    X = X[indeces,:]\n",
     "    y = y[indeces]\n",
@@ -1838,7 +1838,7 @@
     "\n",
     "time_mondrian = time()\n",
     "for l in range(num_rep):\n",
-    "    np.random.seed = l\n",
+    "    np.random.seed(l)\n",
     "    indeces = np.random.permutation(no_of_instances)\n",
     "    X = X[indeces,:]\n",
     "    y = y[indeces]\n",
@@ -1910,7 +1910,7 @@
     "\n",
     "time_mondrian = time()\n",
     "for l in range(num_rep):\n",
-    "    np.random.seed = l\n",
+    "    np.random.seed(l)\n",
     "    indeces = np.random.permutation(no_of_instances)\n",
     "    X = X[indeces,:]\n",
     "    y = y[indeces]\n",
@@ -1978,7 +1978,7 @@
     "\n",
     "time_split = time()\n",
     "for l in range(num_rep):\n",
-    "    np.random.seed = l\n",
+    "    np.random.seed(l)\n",
     "    indeces = np.random.permutation(no_of_instances)\n",
     "    X = X[indeces,:]\n",
     "    y = y[indeces]\n",
