feat: pre-commit initiated with multiple updates

--- a/evaluation/Conditional_Fairness_Experiment.ipynb
+++ b/evaluation/Conditional_Fairness_Experiment.ipynb
@@ -198,9 +198,9 @@
     "\n",
     "for l in range(num_rep):\n",
     "    np.random.seed(l)\n",
-    "    indeces = np.random.permutation(no_of_instances)\n",
-    "    X = X[indeces,:]\n",
-    "    y = y[indeces]\n",
+    "    indices = np.random.permutation(no_of_instances)\n",
+    "    X = X[indices,:]\n",
+    "    y = y[indices]\n",
     "    for train_index, test_index in kf.split(X):\n",
     "        X_train_cal, X_test = X[train_index], X[test_index]\n",
     "        y_train_cal, y_test = y[train_index], y[test_index]\n",
@@ -269,9 +269,9 @@
     "\n",
     "for l in range(num_rep):\n",
     "    np.random.seed(l)\n",
-    "    indeces = np.random.permutation(no_of_instances)\n",
-    "    X = X[indeces,:]\n",
-    "    y = y[indeces]\n",
+    "    indices = np.random.permutation(no_of_instances)\n",
+    "    X = X[indices,:]\n",
+    "    y = y[indices]\n",
     "    for train_index, test_index in kf.split(X):\n",
     "        X_train_cal, X_test = X[train_index], X[test_index]\n",
     "        y_train_cal, y_test = y[train_index], y[test_index]\n",
@@ -334,9 +334,9 @@
     "time_split = time()\n",
     "for l in range(num_rep):\n",
     "    np.random.seed(l)\n",
-    "    indeces = np.random.permutation(no_of_instances)\n",
-    "    X = X[indeces,:]\n",
-    "    y = y[indeces]\n",
+    "    indices = np.random.permutation(no_of_instances)\n",
+    "    X = X[indices,:]\n",
+    "    y = y[indices]\n",
     "    for train_index, test_index in kf.split(X):\n",
     "        X_train_cal, X_test = X[train_index], X[test_index]\n",
     "        y_train_cal, y_test = y[train_index], y[test_index]\n",
@@ -608,9 +608,9 @@
     "\n",
     "for l in range(num_rep):\n",
     "    np.random.seed(l)\n",
-    "    indeces = np.random.permutation(no_of_instances)\n",
-    "    X = X[indeces,:]\n",
-    "    y = y[indeces]\n",
+    "    indices = np.random.permutation(no_of_instances)\n",
+    "    X = X[indices,:]\n",
+    "    y = y[indices]\n",
     "    for train_index, test_index in kf.split(X):\n",
     "        X_train_cal, X_test = X[train_index], X[test_index]\n",
     "        y_train_cal, y_test = y[train_index], y[test_index]\n",
@@ -678,9 +678,9 @@
     "time_mondrian = time()\n",
     "for l in range(num_rep):\n",
     "    np.random.seed(l)\n",
-    "    indeces = np.random.permutation(no_of_instances)\n",
-    "    X = X[indeces,:]\n",
-    "    y = y[indeces]\n",
+    "    indices = np.random.permutation(no_of_instances)\n",
+    "    X = X[indices,:]\n",
+    "    y = y[indices]\n",
     "    for train_index, test_index in kf.split(X):\n",
     "        X_train_cal, X_test = X[train_index], X[test_index]\n",
     "        y_train_cal, y_test = y[train_index], y[test_index]\n",
@@ -750,9 +750,9 @@
     "time_split = time()\n",
     "for l in range(num_rep):\n",
     "    np.random.seed(l)\n",
-    "    indeces = np.random.permutation(no_of_instances)\n",
-    "    X = X[indeces,:]\n",
-    "    y = y[indeces]\n",
+    "    indices = np.random.permutation(no_of_instances)\n",
+    "    X = X[indices,:]\n",
+    "    y = y[indices]\n",
     "    for train_index, test_index in kf.split(X):\n",
     "        X_train_cal, X_test = X[train_index], X[test_index]\n",
     "        y_train_cal, y_test = y[train_index], y[test_index]\n",
@@ -1044,9 +1044,9 @@
     "\n",
     "for l in range(num_rep):\n",
     "    np.random.seed(l)\n",
-    "    indeces = np.random.permutation(no_of_instances)\n",
-    "    X = X[indeces,:]\n",
-    "    y = y[indeces]\n",
+    "    indices = np.random.permutation(no_of_instances)\n",
+    "    X = X[indices,:]\n",
+    "    y = y[indices]\n",
     "    for train_index, test_index in kf.split(X):\n",
     "        X_train_cal, X_test = X[train_index], X[test_index]\n",
     "        y_train_cal, y_test = y[train_index], y[test_index]\n",
@@ -1116,9 +1116,9 @@
     "time_mondrian = time()\n",
     "for l in range(num_rep):\n",
     "    np.random.seed(l)\n",
-    "    indeces = np.random.permutation(no_of_instances)\n",
-    "    X = X[indeces,:]\n",
-    "    y = y[indeces]\n",
+    "    indices = np.random.permutation(no_of_instances)\n",
+    "    X = X[indices,:]\n",
+    "    y = y[indices]\n",
     "    for train_index, test_index in kf.split(X):\n",
     "        X_train_cal, X_test = X[train_index], X[test_index]\n",
     "        y_train_cal, y_test = y[train_index], y[test_index]\n",
@@ -1181,9 +1181,9 @@
     "time_split = time()\n",
     "for l in range(num_rep):\n",
     "    np.random.seed(l)\n",
-    "    indeces = np.random.permutation(no_of_instances)\n",
-    "    X = X[indeces,:]\n",
-    "    y = y[indeces]\n",
+    "    indices = np.random.permutation(no_of_instances)\n",
+    "    X = X[indices,:]\n",
+    "    y = y[indices]\n",
     "    for train_index, test_index in kf.split(X):\n",
     "        X_train_cal, X_test = X[train_index], X[test_index]\n",
     "        y_train_cal, y_test = y[train_index], y[test_index]\n",
@@ -1435,9 +1435,9 @@
     "time_mondrian = time()\n",
     "for l in range(num_rep):\n",
     "    np.random.seed(l)\n",
-    "    indeces = np.random.permutation(no_of_instances)\n",
-    "    X = X[indeces,:]\n",
-    "    y = y[indeces]\n",
+    "    indices = np.random.permutation(no_of_instances)\n",
+    "    X = X[indices,:]\n",
+    "    y = y[indices]\n",
     "    for train_index, test_index in kf.split(X):\n",
     "        X_train_cal, X_test = X[train_index], X[test_index]\n",
     "        y_train_cal, y_test = y[train_index], y[test_index]\n",
@@ -1507,9 +1507,9 @@
     "time_mondrian = time()\n",
     "for l in range(num_rep):\n",
     "    np.random.seed(l)\n",
-    "    indeces = np.random.permutation(no_of_instances)\n",
-    "    X = X[indeces,:]\n",
-    "    y = y[indeces]\n",
+    "    indices = np.random.permutation(no_of_instances)\n",
+    "    X = X[indices,:]\n",
+    "    y = y[indices]\n",
     "    for train_index, test_index in kf.split(X):\n",
     "        X_train_cal, X_test = X[train_index], X[test_index]\n",
     "        y_train_cal, y_test = y[train_index], y[test_index]\n",
@@ -1575,9 +1575,9 @@
     "time_split = time()\n",
     "for l in range(num_rep):\n",
     "    np.random.seed(l)\n",
-    "    indeces = np.random.permutation(no_of_instances)\n",
-    "    X = X[indeces,:]\n",
-    "    y = y[indeces]\n",
+    "    indices = np.random.permutation(no_of_instances)\n",
+    "    X = X[indices,:]\n",
+    "    y = y[indices]\n",
     "    for train_index, test_index in kf.split(X):\n",
     "        X_train_cal, X_test = X[train_index], X[test_index]\n",
     "        y_train_cal, y_test = y[train_index], y[test_index]\n",
@@ -1839,9 +1839,9 @@
     "time_mondrian = time()\n",
     "for l in range(num_rep):\n",
     "    np.random.seed(l)\n",
-    "    indeces = np.random.permutation(no_of_instances)\n",
-    "    X = X[indeces,:]\n",
-    "    y = y[indeces]\n",
+    "    indices = np.random.permutation(no_of_instances)\n",
+    "    X = X[indices,:]\n",
+    "    y = y[indices]\n",
     "    for train_index, test_index in kf.split(X):\n",
     "        X_train_cal, X_test = X[train_index], X[test_index]\n",
     "        y_train_cal, y_test = y[train_index], y[test_index]\n",
@@ -1911,9 +1911,9 @@
     "time_mondrian = time()\n",
     "for l in range(num_rep):\n",
     "    np.random.seed(l)\n",
-    "    indeces = np.random.permutation(no_of_instances)\n",
-    "    X = X[indeces,:]\n",
-    "    y = y[indeces]\n",
+    "    indices = np.random.permutation(no_of_instances)\n",
+    "    X = X[indices,:]\n",
+    "    y = y[indices]\n",
     "    for train_index, test_index in kf.split(X):\n",
     "        X_train_cal, X_test = X[train_index], X[test_index]\n",
     "        y_train_cal, y_test = y[train_index], y[test_index]\n",
@@ -1979,9 +1979,9 @@
     "time_split = time()\n",
     "for l in range(num_rep):\n",
     "    np.random.seed(l)\n",
-    "    indeces = np.random.permutation(no_of_instances)\n",
-    "    X = X[indeces,:]\n",
-    "    y = y[indeces]\n",
+    "    indices = np.random.permutation(no_of_instances)\n",
+    "    X = X[indices,:]\n",
+    "    y = y[indices]\n",
     "    for train_index, test_index in kf.split(X):\n",
     "        X_train_cal, X_test = X[train_index], X[test_index]\n",
     "        y_train_cal, y_test = y[train_index], y[test_index]\n",
