--- a/notebooks/additional_notebooks/demo_speeddating.ipynb
+++ b/notebooks/additional_notebooks/demo_speeddating.ipynb
@@ -32,7 +32,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "calibrated_explanations v0.6.1\n"
+      "calibrated_explanations v0.7.0\n"
      ]
     }
    ],
@@ -720,7 +720,7 @@
          "type": "integer"
         }
        ],
-       "ref": "b2064254-b24c-4275-bb57-caa6fc6f13f8",
+       "ref": "5979be6d-43ca-40c6-b9d0-5fbfe76a60ef",
        "rows": [
         [
          "0",
@@ -1645,7 +1645,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken: 0.011631345748901368\n"
+      "Time taken: 0.006034159660339355\n"
      ]
     }
    ],
@@ -1667,7 +1667,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken to generate alternative rules per instance: 3.9236088514328005\n"
+      "Time taken to generate alternative rules per instance: 4.146745753288269\n"
      ]
     }
    ],
@@ -1686,25 +1686,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n",
-      "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n",
-      "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n",
-      "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n",
-      "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n",
-      "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n",
-      "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n",
-      "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n",
-      "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n",
-      "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n"
      ]
     },
@@ -1712,33 +1712,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken plotting alternative rules per instance: 1.087878704071045\n",
-      "Time taken constructing conjunctive rules per instance: 11.465787243843078\n"
+      "Time taken plotting alternative rules per instance: 0.6914214372634888\n",
+      "Time taken constructing conjunctive rules per instance: 11.617566990852357\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n",
-      "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n",
-      "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n",
-      "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n",
-      "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n",
-      "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n",
-      "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n",
-      "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n",
-      "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n",
-      "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  fig.show()\n"
      ]
     },
@@ -1746,7 +1746,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken plotting alternative and conjunctive rules per instance: 0.7411637544631958\n"
+      "Time taken plotting alternative and conjunctive rules per instance: 0.8255130767822265\n"
      ]
     },
     {
