--- a/notebooks/additional_notebooks/support_xgboost_lightgbm_catboost_issue_92.ipynb
+++ b/notebooks/additional_notebooks/support_xgboost_lightgbm_catboost_issue_92.ipynb
@@ -18,20 +18,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 8,
       "metadata": {
         "collapsed": false
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "C:\\Users\\loftuw\\CUDATemp\\ipykernel_41200\\2734101134.py:18: DeprecationWarning: The legacy module 'calibrated_explanations.core' is deprecated; import from the 'calibrated_explanations.core' package instead.\n",
-            "  from calibrated_explanations.core.calibrated_explainer import CalibratedExplainer\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Optional: install third-party libraries if running on a fresh environment\n",
         "RUN_INSTALL = False  # set to True to install via pip from this notebook\n",
@@ -75,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -93,7 +84,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:195: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+            "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:195: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
             "  fig.show()\n"
           ]
         },
@@ -134,13 +125,13 @@
         "    y_hat, (y_low, y_high) = ce.predict(X_test, uq_interval=True)\n",
         "    print('XGBoost first 10 calibrated predictions:', y_hat[:10])\n",
         "    \n",
-        "    factuals = ce.explain_factual(X_test=X_test[:3])\n",
+        "    factuals = ce.explain_factual(x=X_test[:3])\n",
         "    factuals[0].plot(uncertainty=True)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 10,
       "id": "54e03b3d",
       "metadata": {},
       "outputs": [
@@ -148,7 +139,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+            "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
             "  fig.show()\n"
           ]
         },
@@ -184,7 +175,7 @@
         }
       ],
       "source": [
-        "    alternatives = ce.explore_alternatives(X_test=X_test[:3])\n",
+        "    alternatives = ce.explore_alternatives(x=X_test[:3])\n",
         "    alternatives[0].plot(filter_top=3, rnk_metric=\"feature_weight\")\n",
         "    alternatives[0].plot(style=\"triangular\")\n",
         "    alternatives[0].add_conjunctions()\n",
@@ -203,7 +194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -211,8 +202,9 @@
           "output_type": "stream",
           "text": [
             "[LightGBM] [Info] Number of positive: 62, number of negative: 58\n",
-            "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.122336 seconds.\n",
-            "You can set `force_col_wise=true` to remove the overhead.\n",
+            "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000182 seconds.\n",
+            "You can set `force_row_wise=true` to remove the overhead.\n",
+            "And if memory is not enough, you can set `force_col_wise=true`.\n",
             "[LightGBM] [Info] Total Bins 334\n",
             "[LightGBM] [Info] Number of data points in the train set: 120, number of used features: 8\n",
             "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.516667 -> initscore=0.066691\n",
@@ -295,7 +287,7 @@
             "  warnings.warn(\n",
             "c:\\Users\\loftuw\\AppData\\Local\\anaconda3\\envs\\calibrated_explanations_env\\lib\\site-packages\\sklearn\\utils\\validation.py:2739: UserWarning: X does not have valid feature names, but LGBMClassifier was fitted with feature names\n",
             "  warnings.warn(\n",
-            "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:195: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+            "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:195: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
             "  fig.show()\n"
           ]
         },
@@ -332,13 +324,13 @@
         "    y_hat, (y_low, y_high) = ce.predict(X_test, uq_interval=True)\n",
         "    print('LightGBM first 10 calibrated predictions:', y_hat[:10])\n",
         "    \n",
-        "    factuals = ce.explain_factual(X_test=X_test[:3])\n",
+        "    factuals = ce.explain_factual(x=X_test[:3])\n",
         "    factuals[0].plot(uncertainty=True)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 12,
       "id": "59fb4672",
       "metadata": {},
       "outputs": [
@@ -356,7 +348,7 @@
             "  warnings.warn(\n",
             "c:\\Users\\loftuw\\AppData\\Local\\anaconda3\\envs\\calibrated_explanations_env\\lib\\site-packages\\sklearn\\utils\\validation.py:2739: UserWarning: X does not have valid feature names, but LGBMClassifier was fitted with feature names\n",
             "  warnings.warn(\n",
-            "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+            "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
             "  fig.show()\n"
           ]
         },
@@ -794,7 +786,7 @@
         }
       ],
       "source": [
-        "    alternatives = ce.explore_alternatives(X_test=X_test[:3])\n",
+        "    alternatives = ce.explore_alternatives(x=X_test[:3])\n",
         "    alternatives[0].plot(filter_top=3, rnk_metric=\"feature_weight\")\n",
         "    alternatives[0].plot(style=\"triangular\")\n",
         "    alternatives[0].add_conjunctions()\n",
@@ -813,7 +805,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -830,7 +822,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:195: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+            "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:195: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
             "  fig.show()\n"
           ]
         },
@@ -865,13 +857,13 @@
         "    y_hat, (y_low, y_high) = ce.predict(X_test, uq_interval=True)\n",
         "    print('CatBoost first 10 calibrated predictions:', y_hat[:10])\n",
         "    \n",
-        "    factuals = ce.explain_factual(X_test=X_test[:3])\n",
+        "    factuals = ce.explain_factual(x=X_test[:3])\n",
         "    factuals[0].plot(uncertainty=True)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 14,
       "id": "80972c33",
       "metadata": {},
       "outputs": [
@@ -879,7 +871,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\loftuw\\Documents\\Github\\calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+            "C:\\Users\\loftuw\\Documents\\Github\\kristinebergs-calibrated_explanations\\src\\calibrated_explanations\\_plots_legacy.py:562: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
             "  fig.show()\n"
           ]
         },
@@ -915,7 +907,7 @@
         }
       ],
       "source": [
-        "    alternatives = ce.explore_alternatives(X_test=X_test[:3])\n",
+        "    alternatives = ce.explore_alternatives(x=X_test[:3])\n",
         "    alternatives[0].plot(filter_top=3, rnk_metric=\"feature_weight\")\n",
         "    alternatives[0].plot(style=\"triangular\")\n",
         "    alternatives[0].add_conjunctions()\n",
